TAP5-2613: Upgrade tapestry build to Java 11